fix card background scaling and text overflow

--- a/style-terry1.css
+++ b/style-terry1.css
@@ -172,6 +172,8 @@ body {
 
 .mana {
   font-size: 80%;
+  float: right;
+  padding-top: 2px;
 }
 
 .mana i {
